i18n/ja/docusaurus-plugin-content-docs/version-0.9.x/intro.md
---
sidebar_position: 1
description: Gitti は高速・軽量・キーボード駆動の Git ターミナル UI（TUI）です。レイアウトやパネル、ターミナルからブランチ・ファイル・コミットを管理する始め方を解説します。
keywords:
  - gitti
  - git tui
  - git ui
  - git ターミナル
  - キーボード駆動 git
  - git ターミナル ui
  - git ワークフロー
---

# はじめに

**Gitti** は、Git 操作のための高速で軽量なターミナル UI です。キーボード操作を中心としたインターフェースにより、開発フローを中断することなく一般的な Git タスクを実行できるように設計されています。

## コア哲学

Gitti は主に 3 つのコンポーネントで構成されています：

1.  **ローカルブランチ / タグ / リモート / Worktree** (左上) — `< / >` で切り替え
2.  **変更されたファイル** (左中)
3.  **コミットログ / RefLog** (左下) — `< / >` で切り替え
4.  **スタッシュ** (左下)
5.  **ログパネル** (右下)

**詳細ビュー** (右パネル) は、選択内容に応じてコンテキストに合わせて更新されます。

## グローバルナビゲーション

| キー        | アクション                                   |
| :---------- | :------------------------------------------- |
| `1`         | **ローカルブランチ**にフォーカスを切り替え   |
| `2`         | **変更されたファイル**にフォーカスを切り替え |
| `3`         | **コミットログ / RefLog**にフォーカスを切り替え |
| `4`         | **スタッシュ**にフォーカスを切り替え         |
| `/`         | **ログパネル**にフォーカスを切り替え         |
| `tab`       | コンポーネントを順方向に切り替え             |
| `shift+tab` | コンポーネントを逆方向に切り替え             |
| `F`         | フォーカス中のリストパネルをフィルター       |
| `?`         | グローバルキーバインドのヘルプを開く         |

## リストフィルター

**ローカルブランチ / タグ / リモート / Worktree**、**変更されたファイル**、**コミットログ / RefLog**、**スタッシュ** の各パネルで `F` を押すと、そのリストをフィルターできます。文字を入力してリストを絞り込み、`enter` でフィルターを保持し、`esc` で消去します。各リストは自身のフィルター文字列を保持します。詳細は[リストフィルター](./keybindings.md#リストフィルター)を参照してください。

## マウスサポート

Gitti はマウス操作にも対応しています。パネルを左クリックするとフォーカスし、リスト項目を左クリックすると選択し、ホイールで詳細パネルとポップアップの内容をスクロールできます。詳細は[マウスサポート](./keybindings.md#マウスサポート)を参照してください。

## クイックスタート {#getting-started}

1.  ターミナルを開きます。
2.  Git リポジトリに移動します。
3.  `gitti` を実行します。

現在のリポジトリの状態が表示されます。数字キー (`1`, `2`, `3`, `4`) を使用してパネル間を移動してください。
